@@ -21,7 +21,7 @@
       <img src="./assets/0.4.4/loading.gif" alt="loading"/>
     </div>
     <div id="wrapper" style="display:none;">
-      <div class="timestamp">Generated <abbr class="timeago" title="2011-04-19T11:09:43-07:00">2011-04-19T11:09:43-07:00</abbr></div>
+      <div class="timestamp">Generated <abbr class="timeago" title="2011-04-25T23:00:59-07:00">2011-04-25T23:00:59-07:00</abbr></div>
       <ul class="group_tabs"></ul>
 
       <div id="content">
