@@ -1,1 +1,0 @@
-3ab3f37b019b3bcb1ce2763911dddb6672158085cf9d326c3372f3d7b6205c6b61a0ae9cc082fce5ce8ee4051d5031340e43ff2db722e6fca9630c42e1b3f3e8  sixarm_ruby_current_user-1.3.2.gem
