@@ -1,0 +1,1 @@
+b6b3c4fb6017911775de4e2169e452cfebece1dff1ab69ea963b2ac4efd8d192350cdf0244e781940730030383677f40d7022ed9f3429ada32920ea4288c7fc8  sixarm_ruby_current_user-1.3.8.gem
