@@ -2,7 +2,7 @@ Gem::Specification.new do |s|
 
   s.name              = "sixarm_ruby_current_user"
   s.summary           = "SixArm.com » Ruby » CurrentUser module for Ruby On Rails to get and set a user in a session"
-  s.version           = "1.3.2"
+  s.version           = "1.3.8"
   s.author            = "SixArm"
   s.email             = "sixarm@sixarm.com"
   s.homepage          = "http://sixarm.com/"
@@ -20,7 +20,7 @@ Gem::Specification.new do |s|
   s.files             = top_files + lib_files + test_files
   s.test_files        = test_files
 
-  s.add_dependency('sixarm_ruby_current_user_id', '= 1.3.2')  
-  s.add_dependency('sixarm_ruby_active_record_mock', '>= 1.3.2') # for test
+  s.add_dependency('sixarm_ruby_current_user_id', '= 1.3.8')  
+  s.add_dependency('sixarm_ruby_active_record_mock', '>= 1.4.2') # test
 
 end
