@@ -13,44 +13,41 @@ end
 
 class Testing < Test::Unit::TestCase
 
-  include CurrentUser
-
-  ANNE_ID=1
-  BETH_ID=2
-  CATE_ID=3
-  
-  ANNE = User.new(:id => ANNE_ID, :name => 'Anne')
-  BETH = User.new(:id => BETH_ID, :name => 'Beth')
-  CATE = User.new(:id => CATE_ID, :name => 'Cate')
-
+  # Mock session
   def session
-    @session||=Hash.new
+    @session||={}
   end
 
+  include CurrentUser
+
+  ANNE = User.new(:id => 1, :name => 'Anne')
+  BETH = User.new(:id => 2, :name => 'Beth')
+  CATE = User.new(:id => 3, :name => 'Cate')
+
   def test_blank_slate
-    assert_nil(self.current_user, "current_user")
-    assert_nil(self.current_user_id, "current_user_id")
+    assert_nil(current_user, "current_user")
+    assert_nil(current_user_id, "current_user_id")
   end
 
   def test_current_user_question
-    assert_equal(false, self.current_user?, "current_user is set, so current_user? should return false")
+    assert_equal(false, current_user?, "current_user is set, so current_user? should return false")
     self.current_user=BETH
-    assert_equal(true, self.current_user?, "current_user is set, so current_user? should return true")
+    assert_equal(true, current_user?, "current_user is set, so current_user? should return true")
   end
 
   def test_current_user_equals
-    current_user=BETH
+    self.current_user=BETH
     actual=current_user
     assert_equal(BETH, actual, "beth, actual:#{actual}")
-    assert_not_equal(ANNE, actual, "anne, actual:#{actual}")
-    assert_not_equal(CATE, actual, "cate, actual:#{actual}")
   end
 
-  def test_current_user_clear
-    current_user=ANNE
-    assert_equal(ANNE, current_user, "current_user")
-    current_user=nil
-    assert_nil(current_user, "current_user")
+  def test_current_user_equals_then_reset
+    self.current_user=BETH
+    actual=current_user
+    assert_equal(BETH, actual, "beth, actual:#{actual}")
+    self.current_user=nil
+    actual=current_user
+    assert_equal(nil, actual, "current_user")
   end
 
 end
